force-app/main/default/objects/CRMforNonProfit__Transaction__c/fields/CRMforNonProfit__Campaign__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Campaign__c</fullName>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>