force-app/main/default/objects/CRMforNonProfit__Transaction__c/fields/CRMforNonProfit__Card_Type__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Card_Type__c</fullName>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VISA</fullName>
            </value>
            <value>
                <fullName>Maestro</fullName>
            </value>
            <value>
                <fullName>MasterCard</fullName>
            </value>
            <value>
                <fullName>VisaElectron</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>