force-app/main/default/objects/CRMforNonProfit__Transaction__c/fields/CRMforNonProfit__Contact__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>