force-app/main/default/objects/CRMforNonProfit__Transaction__c/fields/CRMforNonProfit__Darujme_cz_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Darujme_cz_Received_Date__c</fullName>
    <label>Darujme.cz Received Date</label>
    <type>Date</type>
</CustomField>