force-app/main/default/objects/CRMforNonProfit__Transaction__c/fields/CRMforNonProfit__eShopOrderId__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__eShopOrderId__c</fullName>
    <description>order id from Eshop</description>
    <externalId>true</externalId>
    <label>eShopOrderId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>