force-app/main/default/objects/CRMforNonProfit__Transaction__c/fields/CRMforNonProfit__Fio_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Fio_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fio Bank Account</label>
    <referenceTo>CRMforNonProfit__Fio_Bank_Account__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>