force-app/main/default/objects/CRMforNonProfit__Transaction__c/fields/CRMforNonProfit__Inbound_Email__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Inbound_Email__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates whether and from which Inbound Email the transaction was created</description>
    <label>Inbound Email</label>
    <referenceTo>CRMforNonProfit__InboundEmailRecord__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>