force-app/main/default/objects/CRMforNonProfit__Transaction__c/fields/CRMforNonProfit__Manual_Job_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Manual_Job_Timestamp__c</fullName>
    <label>Manual Job Timestamp</label>
    <type>DateTime</type>
</CustomField>