force-app/main/default/objects/CRMforNonProfit__Transaction__c/fields/CRMforNonProfit__Outbound_Account_Num__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Outbound_Account_Num__c</fullName>
    <description>Na účet</description>
    <inlineHelpText>Na účet</inlineHelpText>
    <label>Outbound Account Num.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>