force-app/main/default/objects/CRMforNonProfit__Transaction__c/fields/CRMforNonProfit__Pledge__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Pledge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pledge</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>