force-app/main/default/objects/CRMforNonProfit__Transaction__c/fields/CRMforNonProfit__Real_Amount__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Real_Amount__c</fullName>
    <label>Real Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>