force-app/main/default/objects/CRMforNonProfit__Transaction__c/fields/CRMforNonProfit__Sent_By__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Sent_By__c</fullName>
    <label>Sent By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>