force-app/main/default/objects/CRMforNonProfit__Transaction__c/fields/CRMforNonProfit__Source_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Source_Account_Number__c</fullName>
    <label>Source Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>