force-app/main/default/objects/CRMforNonProfit__Transaction__c/fields/CRMforNonProfit__Specific_Symbol__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Specific_Symbol__c</fullName>
    <label>Specific Symbol</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>