force-app/main/default/objects/CRMforNonProfit__Transaction__c/fields/CRMforNonProfit__Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Transaction_Amount__c</fullName>
    <label>Transaction Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>