force-app/main/default/objects/CRMforNonProfit__Transaction__c/fields/CRMforNonProfit__Transaction_Comment__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Transaction_Comment__c</fullName>
    <label>Transaction Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>