force-app/main/default/objects/CRMforNonProfit__Transaction__c/fields/CRMforNonProfit__Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Transaction_Date__c</fullName>
    <label>Transaction Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>