force-app/main/default/objects/CRMforNonProfit__Transaction__c/fields/CRMforNonProfit__Transaction_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Transaction_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Transaction External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>