force-app/main/default/objects/CRMforNonProfit__Transaction__c/fields/CRMforNonProfit__Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Transaction_Type__c</fullName>
    <description>Typ transakce. Do součtů na kontaktech a firmách jsou započítávány pouze &quot;peněžní dar&quot; a &quot;nepeněžní dar&quot;.</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>peněžní dar</fullName>
                <default>true</default>
                <label>peněžní dar</label>
            </value>
            <value>
                <fullName>nepeněžní dar</fullName>
            </value>
            <value>
                <fullName>členský příspěvek</fullName>
            </value>
            <value>
                <fullName>dotace/grant</fullName>
            </value>
            <value>
                <fullName>protiplnění</fullName>
            </value>
            <value>
                <fullName>ostatní</fullName>
            </value>
            <value>
                <fullName>Platba za zboží</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>