force-app/main/default/objects/CRMforNonProfit__Transaction__c/listViews/CRMforNonProfit__All.listView-meta.xml
<ListView>
    <fullName>CRMforNonProfit__All</fullName>
    <columns>NAME</columns>
    <columns>CRMforNonProfit__Campaign__c</columns>
    <columns>CRMforNonProfit__Contact__c</columns>
    <columns>CRMforNonProfit__Transaction_Amount__c</columns>
    <columns>CRMforNonProfit__Transaction_Status__c</columns>
    <columns>CRMforNonProfit__Transaction_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CRMforNonProfit__Source_Account_Number__c</columns>
    <columns>CRMforNonProfit__Variable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CRMforNonProfit__Contact__c</field>
        <operation>notEqual</operation>
        <value>Neznámý kontakt</value>
    </filters>
    <label>All</label>
</ListView>